# NyaActivate

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
.github/workflows/: ci.yml
src/: config.rs  main.rs  service.rs  watermark.rs
