[package]
name = "nya-activate"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
windows-service = "0.8"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_Threading", "Win32_System_RemoteDesktop", "Win32_Security", "Win32_System_LibraryLoader"] }

log = "0.4"
env_logger = "0.11"
